2007-03-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/bootloader.py, pykickstart/commands/clearpart.py,
	pykickstart/commands/displaymode.py, pykickstart/commands/firewall.py,
	pykickstart/commands/firstboot.py, pykickstart/commands/langsupport.py,
	pykickstart/commands/logging.py, pykickstart/commands/reboot.py,
	pykickstart/commands/selinux.py, pykickstart/commands/upgrade.py:
	Don't set default values so a newly created kickstart handler object
	will only have the values set by a caller.

2007-02-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/updates.py:  Added a new updates command for
	grabbing updates.img files.
	* pykickstart/commands/__init__.py:  Pull in new command object.
	* pykickstart/handlers/control.py:  Add new command to F7 map.

	* pykickstart/commands/raid.py (F7_Raid):  Add support for RAID10.

2007-02-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/device.py (FC3_Device):  Fix device command
	syntax to match anaconda's documentation.

	* pykickstart/commands/method.py:  Add all the attributes that the
	Method commands can set so __call__ works.

2007-02-21  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-21  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base (BaseHandler._registerCommands):  Fix reference to
	cMap and dMap in non-default case (#229505).

2007-02-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Group):  Added an object for dealing with
	extended group syntax.
	(Packages._processGroup):  Add a new function to handle the extended
	group syntax.

	* pykickstart/constants.py:  New group selection constants.

	* pykickstart/handlers/control.py (dataMap):  Add a mapping for data
	objects as well.
