@@ -217,7 +217,7 @@ commandMap = {
         "shutdown": reboot.FC6_Reboot,
         "skipx": skipx.FC3_SkipX,
         "text": displaymode.FC3_DisplayMode,
-        "timezone": timezone.FC3_Timezone,
+        "timezone": timezone.FC6_Timezone,
         "upgrade": upgrade.FC3_Upgrade,
         "user": user.FC6_User,
         "url": method.FC6_Method,
@@ -274,7 +274,7 @@ commandMap = {
         "shutdown": reboot.FC6_Reboot,
         "skipx": skipx.FC3_SkipX,
         "text": displaymode.FC3_DisplayMode,
-        "timezone": timezone.FC3_Timezone,
+        "timezone": timezone.FC6_Timezone,
         "updates": updates.F7_Updates,
         "upgrade": upgrade.FC3_Upgrade,
         "url": method.FC6_Method,
@@ -385,7 +385,7 @@ commandMap = {
         "shutdown": reboot.FC6_Reboot,
         "skipx": skipx.FC3_SkipX,
         "text": displaymode.FC3_DisplayMode,
-        "timezone": timezone.FC3_Timezone,
+        "timezone": timezone.FC6_Timezone,
         "upgrade": upgrade.FC3_Upgrade,
         "user": user.FC6_User,
         "url": method.FC6_Method,
